[gd_scene load_steps=2 format=3 uid="uid://o4im1182wkw1"]

[ext_resource type="Script" uid="uid://csj1thwfryu73" path="res://scenes/ui/action_panel.gd" id="1_w7tca"]

[node name="ActionPanel" type="Control"]
custom_minimum_size = Vector2(514, 397)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.0
offset_top = -397.0
offset_right = 257.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_w7tca")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "YOUR TURN"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AttackSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/AttackSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ATTACK"

[node name="ThrustButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/AttackSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Thrust"

[node name="SwingButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/AttackSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Swing"

[node name="FeintButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/AttackSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Feint"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="DefenseSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/DefenseSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "DEFENSE"

[node name="ParryButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/DefenseSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Parry"

[node name="BlockButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/DefenseSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Block"

[node name="DodgeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/DefenseSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Dodge"

[node name="CounterButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/DefenseSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Counter"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="InfoSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "TARGET & CP"

[node name="TargetLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
text = "Targe: Torso"

[node name="HeadButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Head"

[node name="TorsoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Torso"

[node name="LimbsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Limbs"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2

[node name="CPLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
text = "Allocate CP: 6"

[node name="CPSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 6.0

[node name="CPInfoLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
text = "Available: 6|After this: 3"

[node name="CPWarningLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
text = "Save some for defense!"

[node name="ProbabilityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContainer/InfoSection"]
layout_mode = 2
text = "Hit Chance: 67%"

[node name="BottomRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomRow"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "CONFIRM"
